--- a/style.css
+++ b/style.css
@@ -20,14 +20,20 @@ body {
     padding: 36px;
     border: 2px solid black;
     border-radius: 16px;
-    box-shadow: 5px 3px 10px gray;
+    box-shadow: 5px 3px 10px #222a36;
     background: #3c495e;
 }
 
+#calc h2 {
+    margin: 0;
+    padding: 0;
+    color: #e3f0e1;
+}
+
 #display {
-    border: 2px gray inset;
+    border: 5px #697382 inset;
     padding: 16px 16px;
-    background-color: #e3f0e1;
+    background: #e3f0e1;
     margin-bottom: 24px;
 }
 
@@ -68,4 +74,12 @@ body {
 
 .num-btn {
     height: 64px;
+}
+
+button {
+    border-radius: 8px;
+}
+
+button:hover {
+    box-shadow: 0px 0px 5px gray inset;
 }
