--- a/style.css
+++ b/style.css
@@ -33,13 +33,14 @@ body {
 #display {
     border: 5px #697382 inset;
     padding: 16px 16px;
-    background: #e3f0e1;
     margin-bottom: 24px;
+    background: #e3f0e1;
 }
 
 #display p {
     padding: 0;
     margin: 0;
+    color: #0e2900;
 }
 
 #current {
