--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 #calc h2 {
     margin: 0;
     padding: 0;
-    color: #e3f0e1;
+    color: #ffffff;
 }
 
 #display {
@@ -80,12 +80,18 @@ body {
 button {
     border-radius: 8px;
     border-style: ridge;
+    background: #dddddd;
 }
 
 button:hover {
-    box-shadow: 0px 0px 5px gray inset;
+    box-shadow: 0px 0px 5px #555555 inset;
 }
 
 button:active {
     box-shadow: 0px 0px 5px 2px #3c495e inset;
+}
+
+button:disabled {
+    background: #dddddd;
+    box-shadow: none;
 }
