--- a/style.css
+++ b/style.css
@@ -5,11 +5,28 @@ html {
 body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
     margin: 0px;
     height: 100%;
     font-family:'Courier New', Courier, monospace;
+}
+
+#header {
+    display: flex;
+    align-items: center;
+    background: #222a36;
+    color: #dddddd;
+    padding: 16px;
+}
+
+#header h1 {
+    margin: 0px;
+}
+
+#content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #calc {
@@ -75,6 +92,12 @@ body {
 
 .num-btn {
     height: 64px;
+}
+
+#footer {
+    text-align: center;
+    background: #222a36;
+    color: #dddddd;
 }
 
 button {
